--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Evil emacs kickstart</title>
+    <script defer data-domain="evil-emacs-kickstart.com" src="https://plausible.io/js/script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.6/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
