--- a/index.html
+++ b/index.html
@@ -7,17 +7,43 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.6/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <div class="hero min-h-screen bg-base-200">
-      <div class="hero-content text-center">
-        <div class="max-w-md">
-          <h1 class="text-5xl font-bold">Evil emacs kickstart</h1>
-          <p class="py-6">
-            A minimal emacs config focused for vim modal editing
-          </p>
-          <a class="btn btn-primary" href="https://github.com/erickgnavar/evil-emacs-kickstart">Get Started</a>
+  <body class="bg-base-150 flex flex-col justify-between h-screen">
+    <div class="mx-auto my-auto max-w-md flex flex-col gap-6">
+      <div class="mt-5 text-center">
+        <h1 class="text-5xl font-bold">Evil emacs kickstart</h1>
+        <p class="py-6">
+          A minimal emacs config focused for vim modal editing
+        </p>
+        <a class="btn btn-primary" href="https://github.com/erickgnavar/evil-emacs-kickstart">Get Started</a>
+      </div>
+
+      <h2 class="text-3xl font-bold text-center">FAQ</h2>
+
+      <div class="mockup-window border border-base-300">
+        <div class="flex flex-col px-4 py-16 border-t border-base-300">
+          <div class="chat chat-start">
+            <div class="chat-bubble chat-bubble-primary">Who is this for?</div>
+          </div>
+          <div class="chat chat-end">
+            <div class="chat-bubble chat-bubble-secondary">Anyone who like VIM modal edition and want to try emacs</div>
+          </div>
+
+          <div class="chat chat-start">
+            <div class="chat-bubble chat-bubble-primary">Is this a new emacs distro?</div>
+          </div>
+          <div class="chat chat-end">
+            <div class="chat-bubble chat-bubble-secondary">Nope, this is a basic configuration to start <strong>your own</strong> configuration</div>
+          </div>
         </div>
       </div>
     </div>
+
+    <footer class="footer footer-center p-4 bg-base-300 text-base-content">
+      <aside>
+        <p>
+          Made with ❤️ by <a href="https://erick.navarro.io">@erickgnavar</a>
+        </p>
+      </aside>
+    </footer>
   </body>
 </html>
